# willengine

./: CMakeLists.txt  readme.md
Editor/: App.cpp  App.h  States.h  editor.cpp
Editor/EventHandler/: EventHandler.cpp  EventHandler.h
Editor/UserInterface/: UI.cpp  UI.h
assets/scripts/: enemy.lua  player.lua  scene_config.lua  test.lua
assets/scripts/config/: scene_config.lua
demo/: helloworld.cpp
src/: Engine.cpp  Engine.h  Types.h
src/ECS/: ECS.cpp  ECS.h
src/EventManager/: EventManager.h
src/Events/: CreateEntityEvent.h  KeyPressedEvent.h  SaveEntityToConfigFileEvent.h  SaveSceneEvent.h
src/Graphics/: GraphicsManager.cpp  GraphicsManager.h
src/GraphicsManager/: GraphicsManager.cpp  GraphicsManager.h
src/Input/: InputManager.cpp  InputManager.h
src/InputManager/: InputManager.cpp  InputManager.h
src/PhysicsManager/: PhysicsManager.cpp  PhysicsManager.h
src/ResourceManager/: ResourceManager.cpp  ResourceManager.h
src/SceneManager/: SceneManager.cpp  SceneManager.h
src/ScriptManager/: ScriptManager.cpp  ScriptManager.h
src/SoundManager/: SoundManager.cpp  SoundManager.h
